--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -4,56 +4,33 @@
 {% block content %}
 
 <body>
-
-    <!-- Hero Section Begin -->
+<!-- Hero Section Begin -->
     <section class="hero">
         <div class="hero__slider owl-carousel">
-            <div class="hero__items set-bg" data-setbg="{% static 'img/hero/hero-1.jpg' %}">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-xl-5 col-lg-7 col-md-8">
-                            <div class="hero__text">
-                                <h6>{% trans "Summer Collection" %}</h6>
-                                <h2>{% trans "Fall - Winter Collections 2030" %}</h2>
-                                <p>{% trans 'A specialist label creating luxury essentials. Ethically crafted with an unwavering commitment to exceptional quality.' %}</p>
-                                <a href="#" class="primary-btn">{% trans "Shop now" %} <span class="arrow_right"></span></a>
-                                <div class="hero__social">
-                                    <a href="#"><i class="fa fa-facebook"></i></a>
-                                    <a href="#"><i class="fa fa-twitter"></i></a>
-                                    <a href="#"><i class="fa fa-pinterest"></i></a>
-                                    <a href="#"><i class="fa fa-instagram"></i></a>
+            {% for slider in sliders %}
+                <div class="hero__items set-bg" data-setbg="{{ slider.image.url }}">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-xl-5 col-lg-7 col-md-8">
+                                <div class="hero__text">
+                                    <h6>{{ slider.title1 }}</h6>
+                                    <h2>{{ slider.title2 }}</h2>
+                                    <p>{{ slider.description }}</p>
+                                    <!-- Add other necessary dynamic fields here -->
+                                    <a href="{% url 'shop' %}" class="primary-btn">{% trans "Shop now" %} <span class="arrow_right"></span></a>
+                                    
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="hero__items set-bg" data-setbg="{% static 'img/hero/hero-2.jpg' %}">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-xl-5 col-lg-7 col-md-8">
-                            <div class="hero__text">
-                                <h6>{% trans 'Summer Collection' %}</h6>
-                                <h2>{% trans 'Fall - Winter Collections 2030' %}</h2>
-                                <p>{% trans 'A specialist label creating luxury essentials. Ethically crafted with an unwavering commitment to exceptional quality.' %}</p>
-                                <a href="#" class="primary-btn">{% trans 'Shop now' %} <span class="arrow_right"></span></a>
-                                <div class="hero__social">
-                                    <a href="#"><i class="fa fa-facebook"></i></a>
-                                    <a href="#"><i class="fa fa-twitter"></i></a>
-                                    <a href="#"><i class="fa fa-pinterest"></i></a>
-                                    <a href="#"><i class="fa fa-instagram"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            {% endfor %}
         </div>
     </section>
-    <!-- Hero Section End -->
+<!-- Hero Section End -->
 
     <!-- Banner Section Begin -->
-    <section class="banner spad">
+    {% comment %} <section class="banner spad">
     <div class="container">
         <div class="row">
             {% for product in products %}
@@ -68,7 +45,7 @@
                     </div>
                 </div>
             </div>
-            {% endfor %}
+            {% endfor %} {% endcomment %}
                 {% comment %} <div class="col-lg-5">
                     <div class="banner__item banner__item--middle">
                         <div class="banner__item__pic">
@@ -91,13 +68,89 @@
                         </div>
                     </div>
                 </div> {% endcomment %}
+            {% comment %} </div>
+        </div>
+    </section> {% endcomment %}
+    
+    <!-- Banner Section End -->
+
+    <br> 
+    <br> 
+    <section class="shop spad">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3">
+                    <div class="shop__sidebar">
+                        <div class="shop__sidebar__accordion">
+                            <div class="accordion" id="accordionExample">
+                                <div class="card">
+                                    <div class="card-heading">
+                                        <a data-toggle="collapse" data-target="#collapseSix">Tags</a>
+                                    </div>
+                                    <div id="collapseSix" class="collapse show" data-parent="#accordionExample">
+                                        <div class="card-body">
+                                            <div class="shop__sidebar__tags">                                                
+                                                {% for tags in tags %}                                                
+                                                <a href="{% url 'shop' %}?tags={{ tags.title }}">{{ tags.title }}</a>
+                                                {% endfor %}
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    
+            <div class="row">                        
+                {% for product in mehsul %}
+                    <div class="col-lg-4 col-md-6 col-sm-6">
+                        <!-- Your product item code here -->
+                        <div class="product__item">
+                            <div class="product__item__pic set-bg" data-setbg="{{ product.image.url }}">
+                                <ul class="product__hover">
+                                    <li><a href="#"><img src="{% static 'img/icon/heart.png' %}" alt=""></a></li>
+                                    <li><a href="#"><img src="{% static 'img/icon/compare.png' %}" alt=""> <span>Compare</span></a></li>
+                                    <li><a href="{% url 'shop_detail' slug=product.slug %}"><img src="{% static 'img/icon/search.png' %}" alt=""></a></li>
+                                </ul>
+                            </div>
+                            <div class="product__item__text">
+                                <h6>{{ product.title }}</h6>
+                                <a href="{% url 'shop_detail' slug=product.slug %}" class="add-cart">+ Add To Cart</a>
+                                <div class="product__color__select">
+                                    <!-- Your color selection code here -->
+                                </div>
+                                {% if product.discounted_price %}
+                                    <h5>{{ product.discounted_price|floatformat:2 }} $</h5>  <!-- Display discounted price for products with discounts -->
+                                {% else %}
+                                    <h5>{{ product.price|floatformat:2 }} $</h5>  <!-- Display regular price for products without discounts -->
+                                {% endif %}
+                                {% if product.discounted_price and not product.price == product.discounted_price %}
+                                    <p style="text-decoration: line-through;">Original Price: ${{ product.price|floatformat:2 }}</p>  <!-- Display original price if discounted price is different -->
+                                {% endif %}
+                                <div class="rating">
+                                    {% for _ in product.rating_range %}
+                                        <i class="fa fa-star"></i>
+                                    {% endfor %}
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                {% endfor %}                    
             </div>
         </div>
     </section>
-    <!-- Banner Section End -->
+    
+    
 
+
+
+
+    
     <!-- Product Section Begin -->
-    <section class="product spad">
+    {% comment %} <section class="product spad">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -386,57 +439,10 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> {% endcomment %}
     <!-- Product Section End -->
 
-    <!-- Categories Section Begin -->
-    <section class="categories spad">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3">
-                    <div class="categories__text">
-                        <h2>Clothings Hot <br /> <span>Shoe Collection</span> <br /> Accessories</h2>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="categories__hot__deal">
-                        <img src="{% static 'img/product-sale.png' %}" alt="">
-                        <div class="hot__deal__sticker">
-                            <span>Sale Of</span>
-                            <h5>$29.99</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 offset-lg-1">
-                    <div class="categories__deal__countdown">
-                        <span>Deal Of The Week</span>
-                        <h2>Multi-pocket Chest Bag Black</h2>
-                        <div class="categories__deal__countdown__timer" id="countdown">
-                            <div class="cd-item">
-                                <span>3</span>
-                                <p>Days</p>
-                            </div>
-                            <div class="cd-item">
-                                <span>1</span>
-                                <p>Hours</p>
-                            </div>
-                            <div class="cd-item">
-                                <span>50</span>
-                                <p>Minutes</p>
-                            </div>
-                            <div class="cd-item">
-                                <span>18</span>
-                                <p>Seconds</p>
-                            </div>
-                        </div>
-                        <a href="#" class="primary-btn">Shop now</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Categories Section End -->
-
+    
     <!-- Instagram Section Begin -->
     <section class="instagram spad">
         <div class="container">
@@ -465,17 +471,39 @@
     <!-- Instagram Section End -->
 
     <!-- Latest Blog Section Begin -->
-    <section class="latest spad">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="section-title">
-                        <span>{% trans 'Latest News' %}</span>
-                        <h2>{% trans 'Fashion New Trends' %}</h2>
+    <!-- Latest Blog Section Begin -->
+        <section class="latest spad">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="section-title">
+                            <span>{% trans 'Latest Blogs' %}</span>                        
+                        </div>
                     </div>
                 </div>
+                <!-- Blog Section Begin -->
+                <section class="blog spad">
+                    <div class="container">
+                        <div class="row">
+                            {% for blog_post in blog_posts %}
+                            <div class="col-lg-4 col-md-6 col-sm-6">
+                                <div class="blog__item">
+                                    <div class="blog__item__pic set-bg" data-setbg="{{ blog_post.image.url }}"></div>
+                                    <div class="blog__item__text">
+                                        <span><img src="{% static 'img/icon/calendar.png' %}" alt=""> {{ blog_post.date }}</span>
+                                        <h5>{{ blog_post.title }}</h5>
+                                        <a href="{% url 'blog_details' blog_post.id %}">Read More</a>
+                                    </div>
+                                </div>
+                            </div>
+                            {% endfor %}
+                        </div>
+                    </div>
+                </section>
             </div>
-            <div class="row">
+        </section>
+
+            {% comment %} <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="blog__item">
                         <div class="blog__item__pic set-bg" data-setbg="{% static 'img/blog/blog-1.jpg' %}"></div>
@@ -506,9 +534,9 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-    </section>
+            </div> {% endcomment %}
+        {% comment %} </div>
+    </section> {% endcomment %}
     <!-- Latest Blog Section End -->
 
 {% endblock %}
