--- a/core/templates/partials/header.html
+++ b/core/templates/partials/header.html
@@ -49,7 +49,7 @@
               <div class="col-lg-6 col-md-6">
                   <nav class="header__menu mobile-menu">
                       <ul>
-                          <li class="active"><a href="{% url 'home' %}">{% trans 'Home' %}</a></li>
+                          <li><a href="{% url 'home' %}">{% trans 'Home' %}</a></li>
                           <li><a href="{% url 'shop' %}">{% trans 'Shop' %}</a></li>
                           <li><a href="#">{% trans 'Pages' %}</a>
                               <ul class="dropdown">
@@ -57,7 +57,7 @@
                                  
                                   <li><a href="{% url 'shopping_cart' %}">{% trans 'Shopping Cart' %}</a></li>
                                   <li><a href="{% url 'checkout' %}">{% trans 'Check Out' %}</a></li>
-                                  <li><a href="{% url 'blog_details' %}">{% trans 'Blog Details' %}</a></li>
+                                  
                               </ul>
                           </li>
                           <li><a href="{% url 'blog'%}">{% trans 'Blog' %}</a></li>
